--- a/index.html
+++ b/index.html
@@ -170,10 +170,12 @@
     <div class="row align-items-md-stretch">
       <div class="col-md-6">
         <div class="h-100 p-5 text-bg-dark rounded-3">
-          <h2>African bush elephant</h2>
-          <p>African bush elephants are distributed across 37 African countries and inhabits forests, grasslands and woodlands, wetlands and agricultural land.</p>
-          <img src="assets/images/african_elephant_1.jpg" width="50%" alt="African bush elephant"><br><br>
-          <button class="btn btn-outline-light" type="button" onclick="window.open('https://www.flickr.com/photos/rayinmanila/53174575364','_blank')">More..</button>
+          <h2>แมวเปอร์เซีย (Persian cat)</h2>
+          <p>ทำความรู้จักแมวเปอร์เซีย (Persian Cat)
+            แมวเปอร์เซีย หรือ Persian Cat คือหนึ่งในสายพันธุ์น้องแมวขนสวยยาวเงางาม และจัดเป็นหนึ่งในสิบสายพันธุ์แมว ที่ได้รับความนิยมนำมาเลี้ยงมากที่สุดบนโลกสายพันธุ์หนึ่ง ด้วยขนที่สวย บวกกับความน่ารัก ความจงรักภักดีต่อเจ้าของ รักความสงบ ไม่ส่งเสียงดังเอะอะ และความฉลาดแสนรู้ของแมวเปอร์เซีย ทำให้น้องแมวสายพันธุ์นี้มัดใจให้หลายคนตกหลุมรักกันแบบถอนตัวไม่ขึ้น มาทำความรู้จักน้องแมวเปอร์เซีย กันให้มากอีกนิด แล้วคุณจะหลงรักน้องแมวเปอร์เซียยิ่งขึ้นไปอีก <br><br>
+            ลักษณะเด่นของแมวเปอร์เซียอยู่ที่ตาที่โต กะโหลกกลม หน้าแบน แก้มแน่น และใบหูขนาดเล็กที่มีปลายมน ขนาดหัวที่ใหญ่ของแมวเปอร์เซียช่วยพยุงคอที่สั้น หลายคนอาจเคยสังเกตเห็นว่าแมวเปอร์เซียมีหน้าตาหลายแบบ เช่น หน้าแบนสุดๆ แบบ Peke-face หรือเป็นลุคเก่าที่จะเห็นว่าใบหน้าแมวเปอร์เซียมีความกลมขึ้นมาอีกนิดแบบ Doll-face ซึ่งอายุเฉลี่ยของแมวสายพันธุ์นี้อยู่ที่ 10 – 15 ปี มีความยาวลำตัว 14 – 18 นิ้ว (ไม่รวมความยาวหาง) น้ำหนักประมาณ 4 – 6 กิโลกรัม รูปร่างของแมวเปอร์เซียจะเป็นสัดส่วนของกล้ามเนื้อเป็นส่วนใหญ่ ขาสั้น หนา และมีอุ้งเท้าขนาดใหญ่ หางแมวเปอร์เซียจัดว่าไม่ยาวมากเมื่อเทียบกับสัดส่วนลำตัวของแมว</p>
+          <img src="assets/images/Persian cat.jpg" width="50%" alt="African bush elephant"><br><br>
+          <button class="btn btn-outline-light" type="button" onclick="window.open('https://www.purina.co.th/find-a-pet/cat-breeds/persian-long-hair','_blank')">More..</button>
         </div>
       </div>
       <div class="col-md-6">
