--- a/index.html
+++ b/index.html
@@ -180,10 +180,12 @@
       </div>
       <div class="col-md-6">
         <div class="h-100 p-5 bg-body-tertiary border rounded-3">
-          <h2>Asian elephant</h2>
-          <p>Asian elephants frequently inhabit grasslands, tropical evergreen forests, semi-evergreen forests, moist deciduous forests, dry deciduous forests and dry thorn forests.</p>
-          <img src="assets/images/asian_elephant_1.jpg" width="50%" alt="Asian elephant"><br><br>
-          <button class="btn btn-outline-secondary" type="button" onclick="window.open('https://www.flickr.com/photos/berniedup/7852943934','_blank')">More..</button>
+          <h2>สก๊อตทิช โฟลด์ (Scottish fold)</h2>
+          <p>ทำความรู้จัก สก๊อตทิช โฟล์ด [Scottish fold]
+            อีกหนึ่งสายพันธุ์น้องแมวที่เป็นที่รู้จักมากไม่แพ้สายพันธุ์ไหนก็คือ สายพันธุ์สก๊อตทิช โฟลด์ [Scottish fold] ที่มีหูพับอันเป็นเอกลักษณ์แสนเก๋ที่ไม่เหมือนใคร หน้ากลมแป้น ขนอุยนุ่มน่ากอด ทำให้น้องแมวพันธุ์สก๊อตทิช โฟลด์ น้องแมวผู้มาจากสก๊อตแลนด์ ยึดพื้นที่หัวใจเจ้าของหลายๆ คนไปแล้ว <br><br>
+            แมวสายพันธุ์นี้มีอายุเฉลี่ยอยู่ที่ 11 – 14 ปี ความสูงอยู่ที่ 10 – 12 นิ้ว ด้วยหูที่พบลงมา ทำให้ใบหน้าของสก๊อตทิช โฟลด์ ดูกลม จนหลายคนให้คำอธิบายแมวสายพันธุ์นี้ไว้อย่างเห็นภาพว่าเหมือนกับ นกฮูก โดยใบหูของสก๊อตทิช โฟลด์ จะมีทั้งแบบพับงอไปด้านหน้า เรียกว่า single fold แบบพับงอที่มากขึ้นหรือ double fold และแบบที่พับราบไปกับหัว หรือ triple fold โดยลูกแมวที่เกิดมาแล้วมีใบหูตั้งก็อย่าเพิ่งตกใจไป เพราะใบหูของลูกแมวที่พับจะเริ่มมองเห็นเมื่อแมวมีอายุประมาณ 3 สัปดาห์</p>
+          <img src="assets/images/Scottish fold.jpg" width="50%" alt="Asian elephant"><br><br>
+          <button class="btn btn-outline-secondary" type="button" onclick="window.open('https://www.purina.co.th/find-a-pet/cat-breeds/scottish-fold','_blank')">More..</button>
         </div>
       </div>
     </div>
